# cosmic_conquest

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
original/: .info  Cosmic_Conquest_1989_Edman_Carl_PD_a.adf  IncRev  README  berserker.c  co.lzh  conquest.c  cosmic.doc.info  klingon.c  main.c  romulan.c
original/extracted/: Lharc  TestGame  Trashcan.info  alien.c  cosmic  cosmic.doc  cosmic.info  defs.h  human.c  makefile  proto.h  ships.h
source/: alien.c  berserker.c  conquest.c  defs.h  human.c  klingon.c  main.c  platform.h  platform_doslike.c  proto.h  romulan.c  ships.h
